--- a/index.html
+++ b/index.html
@@ -21,42 +21,61 @@
       scroll-behavior: smooth;
     }
 
-    /* Cabeçalho */
+    /* Header */
     header {
-  background: linear-gradient(135deg, #4a90e2, #7b4397);
-  color: #fff;
-  padding: 20px 40px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* centraliza verticalmente */
-  flex-wrap: wrap;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
+      background: linear-gradient(135deg, #4a90e2, #7b4397);
+      color: #fff;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
 
-header img {
-  height: 80px;
-  width: auto;
-  border-radius: 8px;
-  display: block; /* garante que não haja espaço extra */
-  margin: auto 0; /* centraliza verticalmente em todos os casos */
-}
+    header img {
+      height: 80px;
+      width: auto;
+      border-radius: 8px;
+      display: block;
+    }
+
+    nav {
+      display: flex;
+      gap: 15px;
+    }
 
     nav a {
       color: #fff;
       text-decoration: none;
-      margin: 0 15px;
       font-weight: 600;
-      transition: all 0.3s ease;
       padding: 8px 14px;
       border-radius: 8px;
+      transition: all 0.3s ease;
     }
 
     nav a:hover {
       background: rgba(255, 255, 255, 0.2);
       transform: scale(1.05);
+    }
+
+    /* Botão hamburger */
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+      gap: 5px;
+    }
+
+    .menu-toggle span {
+      height: 3px;
+      width: 25px;
+      background: #fff;
+      border-radius: 2px;
+      transition: all 0.3s ease;
     }
 
     /* Hero */
@@ -77,7 +96,7 @@ header img {
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.3); /* camada leve sobre a imagem */
+      background: rgba(0, 0, 0, 0.3);
     }
 
     .hero h2 {
@@ -178,8 +197,37 @@ header img {
     /* Responsividade */
     @media (max-width: 768px) {
       header {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px 20px;
+      }
+
+      nav {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background: linear-gradient(135deg, #4a90e2, #7b4397);
         flex-direction: column;
+        width: 100%;
+        display: none;
+        opacity: 0;
+        transition: all 0.3s ease;
+      }
+
+      nav.active {
+        display: flex;
+        opacity: 1;
+        animation: slideDown 0.3s ease forwards;
+      }
+
+      nav a {
+        margin: 10px 0;
+        padding: 12px 20px;
         text-align: center;
+      }
+
+      .menu-toggle {
+        display: flex;
       }
 
       .hero h2 {
@@ -191,12 +239,22 @@ header img {
         font-size: 16px;
       }
     }
+
+    @keyframes slideDown {
+      0% { transform: translateY(-20px); opacity: 0; }
+      100% { transform: translateY(0); opacity: 1; }
+    }
   </style>
 </head>
 <body>
   <header>
     <img src="logo.png" alt="Logo da Comunidade Evangélica Aliança de Amor">
-    <nav>
+    <div class="menu-toggle" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <nav id="menu">
       <a href="#sobre">Sobre</a>
       <a href="#eventos">Eventos</a>
       <a href="#contato">Contato</a>
@@ -216,18 +274,18 @@ header img {
     <h2>Próximos Cultos & Eventos</h2>
     <div class="eventos-container">
       <div class="evento">
-        <h3>Culto de Domingo</h3>
+        <h3>Culto de Adoração</h3>
         <p>Todos os domingos às 19h</p>
-        <p>Momentos de louvor, adoração e palavra inspirada.</p>
+        <p>Momentos de louvor, adoração e palavra inspirada por Deus.</p>
       </div>
       <div class="evento">
-        <h3>Estudo Bíblico</h3>
+        <h3>Culto de Libertação</h3>
         <p>Quartas às 20h</p>
         <p>Encontros para aprofundar na Palavra e fortalecer a fé.</p>
       </div>
       <div class="evento">
-        <h3>Vigília de Oração</h3>
-        <p>Primeira sexta do mês</p>
+        <h3>Congresso de Mulheres</h3>
+        <p>algum dia que esqueci</p>
         <p>Noite especial de oração e intercessão pela igreja e pela cidade.</p>
       </div>
     </div>
@@ -243,5 +301,12 @@ header img {
     <p>© 2025 Comunidade Evangélica Aliança de Amor</p>
     <p>Todos os direitos reservados.</p>
   </footer>
+
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById('menu');
+      menu.classList.toggle('active');
+    }
+  </script>
 </body>
 </html>
