Adiciona item Pedido de Oração no menu e atualiza header

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     }
 
     section h2 {
-      color: #4a90e2;
+      color: #82b3eb;
       margin-bottom: 20px;
       font-size: 34px;
       text-align: center;
@@ -258,11 +258,12 @@
       <a href="#sobre">Sobre</a>
       <a href="#eventos">Eventos</a>
       <a href="#contato">Contato</a>
+      <a href="https://link-do-seu-pedido.com" target="_blank">Pedido de Oração</a>
     </nav>
   </header>
 
   <section class="hero">
-    <h2>Seja bem-vindo à Comunidade Evangélica Aliança de Amor</h2>
+    <h2>Comunidade Evangélica Aliança de Amor</h2>
   </section>
 
   <section id="sobre">
@@ -285,7 +286,7 @@
       </div>
       <div class="evento">
         <h3>Congresso de Mulheres</h3>
-        <p>algum dia que esqueci</p>
+        <p>Algum dia que esqueci</p>
         <p>Noite especial de oração e intercessão pela igreja e pela cidade.</p>
       </div>
     </div>
